--- a/_sass/addon/syntax.scss
+++ b/_sass/addon/syntax.scss
@@ -42,6 +42,7 @@ html {
 
 .highlighter-rouge {
   color: var(--highlighter-rouge-color);
+  font-weight: bold;
   margin-top: 0.5rem;
   margin-bottom: 1.2em; /* Override BS Inline-code style */
 }
