--- a/_sass/addon/variables.scss
+++ b/_sass/addon/variables.scss
@@ -19,7 +19,8 @@ $base-radius: 0.5rem;
 
 /* syntax highlight */
 
-$code-font-size: 0.85rem !default;
+// $code-font-size: 0.85rem !default;
+$code-font-size: 1rem !default;
 
 /* fonts */
 
