design: 스타일 변경

--- a/_sass/addon/syntax.scss
+++ b/_sass/addon/syntax.scss
@@ -93,6 +93,7 @@ code {
   hyphens: none;
 
   &.highlighter-rouge {
+    font-family: $font-family-base;
     font-size: $code-font-size;
     padding: 3px 5px;
     word-break: break-word;
