--- a/_sass/colors/light-syntax.scss
+++ b/_sass/colors/light-syntax.scss
@@ -216,7 +216,7 @@
   --language-border-color: rgba(172, 169, 169, 0.2);
   --highlight-bg-color: #fcfcfc;
   // --highlighter-rouge-color: #3f596f;
-  --highlighter-rouge-color: #ff6600;
+  --highlighter-rouge-color: #27ab27;
   --highlight-lineno-color: #959595;
   --inline-code-bg: #f6f6f7;
   --code-header-text-color: #a3a3a3;
